# tiny-milestones

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  conftest.py  docker-compose.local.yaml  docker-compose.prod.yaml  pyproject.toml  renovate.json
.envs/.local/: .django  .postgres
.envs/.prod/: .django  .postgres
.github/: .commit_template  .gitmessage
.github/workflows/: bump_version.yaml  lint_test.yaml  linting_and_testing.yaml  prod.yaml  update_develop_branch.yaml
apps/children/: admin.py  apps.py  factories.py  models.py  serializers.py  urls.py  views.py
apps/children/migrations/: 0001_initial.py
apps/children/tests/: test_children_views.py  test_models.py
apps/kids/: admin.py  apps.py  factories.py  models.py  serializers.py  urls.py  views.py
apps/kids/migrations/: 0001_initial.py
apps/kids/tests/: test_kids_views.py  test_models.py
apps/users/: admin.py  factories.py  managers.py  models.py  paginations.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_options.py
apps/users/tests/: test_models.py  test_token_views.py  test_users_views.py
compose/local/django/: Dockerfile  entrypoint  start
compose/prod/django/: Dockerfile  entrypoint  start
compose/prod/nginx/: Dockerfile  default.conf
config/: asgi.py  settings.py  urls.py  wsgi.py
config/settings/: base.py  local.py  prod.py  test.py
fixtures/: common.py
